# pytorch-lab

./: .gitignore  LICENSE  README.md  SETUP_REPLICATION.md  environment.yml  pyproject.toml  requirements.txt
docs/: README.md  environment-setup-guide.md  installation.md  quick-start.md  tensor_operations_guide.md
examples/: C1_M1_Lab_3_tensors.ipynb  README.md  tensor_operations_practical_guide.ipynb
meta_spliceai/docs/: gated_cnn_architecture.md
pytorch_lab/: __init__.py
pytorch_lab/core/: __init__.py
pytorch_lab/data/: __init__.py
pytorch_lab/layers/: __init__.py
pytorch_lab/losses/: __init__.py
pytorch_lab/models/: __init__.py
pytorch_lab/tensor_ops/: README.md  __init__.py  batch_ops.py  feature_engineering.py  masking.py  preprocessing.py
pytorch_lab/training/: __init__.py
pytorch_lab/utils/: __init__.py
