
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-lab"
version = "0.1.0"
description = "A hands-on lab for learning PyTorch and building reusable deep learning modules"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "pydantic>=2.6",
    "typer>=0.12.3",
    "rich>=13.7",
]

[project.optional-dependencies]
vision = ["pillow>=10.0", "opencv-python>=4.8"]
nlp = ["transformers>=4.35", "tokenizers>=0.15"]
experiment = ["tensorboard>=2.15", "wandb>=0.16"]
dev = ["ipykernel", "jupyter", "pytest", "black", "ruff", "mypy"]
all = ["pytorch-lab[vision,nlp,experiment,dev]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pytorch_lab*"]
exclude = ["dev*", "apps*", "scripts*", "examples*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
